orders-tab-show-notes

--- a/src/app/containers/orders/orders.component.html
+++ b/src/app/containers/orders/orders.component.html
@@ -29,7 +29,7 @@
           <li>
             <span> <strong>Notes</strong> </span>
             <br/>
-            <span> &nbsp;&nbsp;{{order.Notes}}</span>
+            <span> &nbsp;&nbsp;{{order.notes}}</span>
           </li>
           <li>
             <span> <strong>Total Price</strong> </span>
