--- a/src/assets/scss/constants.scss
+++ b/src/assets/scss/constants.scss
@@ -1,9 +1,11 @@
-$green_color: #76FF03;
-$blue_color: #0376FF;
-$pink_color: #FF0376;
-$white_color: #FFFFFF;
-$red_error_color: #E1341E;
-$green_color_filter: invert(83%) sepia(33%) saturate(2438%) hue-rotate(39deg) brightness(104%) contrast(108%);
-$pink_color_filter: invert(20%) sepia(100%) saturate(5944%) hue-rotate(325deg) brightness(101%) contrast(106%);
-$blue_color_filter: invert(60%) sepia(90%) saturate(7499%) hue-rotate(206deg) brightness(108%) contrast(102%);
-
+$green_color: #76ff03;
+$blue_color: #0376ff;
+$pink_color: #ff0376;
+$white_color: #ffffff;
+$red_error_color: #e1341e;
+$green_color_filter: invert(83%) sepia(33%) saturate(2438%) hue-rotate(39deg)
+  brightness(104%) contrast(108%);
+$pink_color_filter: invert(20%) sepia(100%) saturate(5944%) hue-rotate(325deg)
+  brightness(101%) contrast(106%);
+$blue_color_filter: invert(60%) sepia(90%) saturate(7499%) hue-rotate(206deg)
+  brightness(108%) contrast(102%);
