--- a/src/app/containers/card/card.component.scss
+++ b/src/app/containers/card/card.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/constants.scss";
+@import '../../../assets/scss/constants.scss';
 .card {
   border: 2px $blue_color dashed;
   width: fit-content;
@@ -9,24 +9,24 @@ img {
   width: 250px;
   height: 250px;
 }
-.description{
+.description {
   text-align: center;
 }
-.btnContainer{
-    display: flex;
-    justify-content: space-around;
+.btnContainer {
+  display: flex;
+  justify-content: space-around;
 }
-.btn{
-    color: $white_color;
-    border: 0;
-    background: transparent;
+.btn {
+  color: $white_color;
+  border: 0;
+  background: transparent;
 }
-.add{
+.add {
   width: 20px;
   height: 20px;
   filter: $pink_color_filter;
 }
-.remove{
+.remove {
   height: 20px;
   width: 20px;
   filter: $green_color_filter;
