--- a/src/app/containers/orders/orders.component.scss
+++ b/src/app/containers/orders/orders.component.scss
@@ -1,15 +1,15 @@
-@import "../../../assets/scss/constants.scss";
+@import '../../../assets/scss/constants.scss';
 .order {
-    margin: 1rem;
-    border-bottom: 0.25em dashed $green_color;
-    padding-bottom: 0.5rem;
-    ul {
-       list-style: none;
-    }
+  margin: 1rem;
+  border-bottom: 0.25em dashed $green_color;
+  padding-bottom: 0.5rem;
+  ul {
+    list-style: none;
+  }
 }
-.center{
-    text-align: center;
+.center {
+  text-align: center;
 }
 .active {
-    background-color: $blue_color;
+  background-color: $blue_color;
 }
