call-map-component-in-checkout-page

--- a/src/app/containers/checkout/checkout.component.html
+++ b/src/app/containers/checkout/checkout.component.html
@@ -84,6 +84,9 @@
                   required
                   formControlName="streetName"
                 />
+                <div class="map-container">
+                  <app-leaflet-map></app-leaflet-map>
+                </div>
                 <label for="notes">Notes</label>
                 <textarea
                   id="notes"
