--- a/src/app/containers/checkout/checkout.component.scss
+++ b/src/app/containers/checkout/checkout.component.scss
@@ -75,3 +75,8 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.map-container {
+  margin: 5% auto;
+  width: 500px;
+  height: 500px;
+}
