--- a/src/app/containers/checkout/checkout.component.scss
+++ b/src/app/containers/checkout/checkout.component.scss
@@ -76,7 +76,10 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 .map-container {
-  margin: 5% auto;
   width: 500px;
   height: 500px;
+  position: absolute;
+}
+.submit-btn {
+  margin-top: 550px;
 }
