add-current-user-lcation-functionality-to-map

--- a/src/app/containers/map/leaflet-map/leaflet-map.component.html
+++ b/src/app/containers/map/leaflet-map/leaflet-map.component.html
@@ -1,1 +1,9 @@
-<div id="map"></div>
+<div>
+    <div id="map">
+        <div class="map_button_container" (click)="getLocation()">
+           <img src="../../../../assets/svg/location.svg" alt="location" >
+        </div>
+        <div class="leaflet-top leaflet-right">
+        </div>
+    </div>
+</div>
