set-height-of-header

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;
     background-color: $blue_color;
     line-height: initial;
+    height: 70px;
 }
 img{
     width: 50px;
