--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,26 @@ input.ng-invalid.ng-touched {
 body {
   font-family: cursive;
 }
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $green_color ;
+  // scrollbar-color: $green_color $blue_color;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  // background: $blue_color;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $green_color;
+  border-radius: 20px;
+  // border: 3px solid $blue_color;
+}
+
