--- a/src/app/containers/checkout/checkout.component.html
+++ b/src/app/containers/checkout/checkout.component.html
@@ -86,6 +86,9 @@
                                 class="form-control"
                                 formControlName= "notes"
                                 ></textarea>
+                                <div class="map-container">
+                                    <app-leaflet-map></app-leaflet-map>
+                                </div>
                                 <div class="center content">
                                     <button
                                     type="submit"
