change-map-position

--- a/src/app/containers/checkout/checkout.component.html
+++ b/src/app/containers/checkout/checkout.component.html
@@ -86,6 +86,7 @@
                                 class="form-control"
                                 formControlName= "notes"
                                 ></textarea>
+                                <label>Location</label>
                                 <div class="map-container">
                                     <app-leaflet-map></app-leaflet-map>
                                 </div>
