set-up-zoom-functions-and-add-them-to-the-map

--- a/src/app/containers/leaflet-map/leaflet-map.component.html
+++ b/src/app/containers/leaflet-map/leaflet-map.component.html
@@ -2,6 +2,12 @@
         <div class="map_button_container" (click)="getLocation()">
            <img src="../../../../assets/svg/location.svg" alt="location" >
         </div>
+        <div class="map_button_container" (click)="zoomIn()" style="margin-top: 50px;">
+            <img src="../../../../assets/svg/zoom-in.svg" alt="location" >
+         </div>
+         <div class="map_button_container" (click)="zoomOut()" style="margin-top: 80px;">
+            <img src="../../../../assets/svg/zoom-out.svg" alt="location" >
+         </div>
         <div class="leaflet-top leaflet-right">
         </div>
     </div>
