--- a/src/app/containers/leaflet-map/leaflet-map.component.html
+++ b/src/app/containers/leaflet-map/leaflet-map.component.html
@@ -8,6 +8,11 @@
          <div class="map_button_container" (click)="zoomOut()" style="margin-top: 80px;">
             <img src="../../../../assets/svg/zoom-out.svg" alt="location" >
          </div>
+         <div class="search_input">
+            <input type="text" class="form-control" [formControl]="searchText">
+            <img src="../../../../assets/svg/search.svg" alt="search" class="search_icon"
+            (click)="search()">
+         </div>
         <div class="leaflet-top leaflet-right">
         </div>
     </div>
