--- a/src/app/components/alert-message/alert-message.component.html
+++ b/src/app/components/alert-message/alert-message.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="hideMessage" class="alert alert-dismissible " 
-[ngClass]="{'alert-success': successAlert,'alert-danger': errorAlert}">
-    <strong>{{alertType}}!</strong> {{alertMessage}}
+<div
+  *ngIf="hideMessage"
+  class="alert alert-dismissible"
+  [ngClass]="{ 'alert-success': successAlert, 'alert-danger': errorAlert }">
+  <strong>{{ alertType }}!</strong> {{ alertMessage }}
 </div>
