--- a/src/app/containers/fruits-store/fruits-store.component.html
+++ b/src/app/containers/fruits-store/fruits-store.component.html
@@ -5,27 +5,38 @@
   <div *ngIf="summerFruitsPage.length > 0">
     <h3>Summer Fruits</h3>
     <div class="cardContainer">
-      <app-card 
-      *ngFor="let item of summerFruitsPage" 
-      name={{item.name}} price={{item.price}} 
-      imgName={{item.image}} category="summerFruits"
-      (addItem)="onAddItemToShoppingList($event)"
-      (removeItem)="onRemoveItemFromShoppingList($event)"
-      >
+      <app-card
+        *ngFor="let item of summerFruitsPage"
+        name="{{ item.name }}"
+        price="{{ item.price }}"
+        imgName="{{ item.image }}"
+        category="summerFruits"
+        (addItem)="onAddItemToShoppingList($event)"
+        (removeItem)="onRemoveItemFromShoppingList($event)">
       </app-card>
     </div>
     <div>
       <div class="btnContainer">
         <div>
-          <button class="btnSecondary" (click)="PreviousPage(currentSummerPage, summerFruitsArray, 'summer')"
+          <button
+            class="btnSecondary"
+            (click)="
+              PreviousPage(currentSummerPage, summerFruitsArray, 'summer')
+            "
             [disabled]="currentSummerPage === 1">
-            <img src="../../../assets/svg/arrow-left-circle-fill.svg" class="icon">
+            <img
+              src="../../../assets/svg/arrow-left-circle-fill.svg"
+              class="icon" />
           </button>
         </div>
         <div>
-          <button class="btnPrimary" (click)="NextPage(currentSummerPage, summerFruitsArray, 'summer')"
+          <button
+            class="btnPrimary"
+            (click)="NextPage(currentSummerPage, summerFruitsArray, 'summer')"
             [disabled]="currentSummerPage === 3">
-            <img src="../../../assets/svg/arrow-right-circle-fill.svg" class="icon">
+            <img
+              src="../../../assets/svg/arrow-right-circle-fill.svg"
+              class="icon" />
           </button>
         </div>
       </div>
@@ -34,29 +45,40 @@
 
   <div *ngIf="winterFruitsPage.length > 0">
     <h3>Winter Fruits</h3>
-  
+
     <div class="cardContainer">
-      <app-card 
-      *ngFor="let item of winterFruitsPage" 
-      name={{item.name}} price={{item.price}} 
-      imgName={{item.image}} category="winterFruits"
-      (addItem)="onAddItemToShoppingList($event)"
-      (removeItem)="onRemoveItemFromShoppingList($event)"
-      >
+      <app-card
+        *ngFor="let item of winterFruitsPage"
+        name="{{ item.name }}"
+        price="{{ item.price }}"
+        imgName="{{ item.image }}"
+        category="winterFruits"
+        (addItem)="onAddItemToShoppingList($event)"
+        (removeItem)="onRemoveItemFromShoppingList($event)">
       </app-card>
     </div>
     <div>
       <div class="btnContainer">
         <div>
-          <button class="btnSecondary" (click)="PreviousPage(currentWinterPage, winterFruitsArray, 'winter')"
+          <button
+            class="btnSecondary"
+            (click)="
+              PreviousPage(currentWinterPage, winterFruitsArray, 'winter')
+            "
             [disabled]="currentWinterPage === 1">
-            <img src="../../../assets/svg/arrow-left-circle-fill.svg" class="icon">
+            <img
+              src="../../../assets/svg/arrow-left-circle-fill.svg"
+              class="icon" />
           </button>
         </div>
         <div>
-          <button class="btnPrimary" (click)="NextPage(currentWinterPage, winterFruitsArray, 'winter')"
+          <button
+            class="btnPrimary"
+            (click)="NextPage(currentWinterPage, winterFruitsArray, 'winter')"
             [disabled]="currentWinterPage === 3">
-            <img src="../../../assets/svg/arrow-right-circle-fill.svg" class="icon">
+            <img
+              src="../../../assets/svg/arrow-right-circle-fill.svg"
+              class="icon" />
           </button>
         </div>
       </div>
