--- a/src/app/components/page-not-found/page-not-found.component.scss
+++ b/src/app/components/page-not-found/page-not-found.component.scss
@@ -1,14 +1,14 @@
-@import "../../../assets/scss/constants.scss";
+@import '../../../assets/scss/constants.scss';
 .div-container {
-    color: $green_color;
-    text-align: center;
+  color: $green_color;
+  text-align: center;
 }
 
 .text-container {
-    font-size: 7rem;
-    margin: 10% 0;
+  font-size: 7rem;
+  margin: 10% 0;
 }
 
 .status-container {
-    font-size: 15rem;
+  font-size: 15rem;
 }
