fix-import-in-scss-files

--- a/src/app/user-site/components/header/header.component.scss
+++ b/src/app/user-site/components/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/constants.scss';
+@import '../../../../assets/scss/constants.scss';
 .headerContainer {
   display: flex;
   justify-content: space-between;
