--- a/src/app/user-site/components/page-not-found/page-not-found.component.scss
+++ b/src/app/user-site/components/page-not-found/page-not-found.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/constants.scss';
+@import '../../../../assets/scss/constants.scss';
 .div-container {
   color: $green_color;
   text-align: center;
