--- a/src/app/user-site/containers/auth/login/login.component.scss
+++ b/src/app/user-site/containers/auth/login/login.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/scss/constants.scss';
+@import '../../../../../assets/scss/constants.scss';
 
 .login {
   font-size: 20px;
