--- a/src/app/user-site/containers/card/card.component.scss
+++ b/src/app/user-site/containers/card/card.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/constants.scss';
+@import '../../../../assets/scss/constants.scss';
 .card {
   border: 2px $blue_color dashed;
   width: fit-content;
