--- a/src/app/user-site/containers/orders/orders.component.scss
+++ b/src/app/user-site/containers/orders/orders.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/constants.scss';
+@import '../../../../assets/scss/constants.scss';
 .order {
   margin: 1rem;
   border-bottom: 0.25em dashed $green_color;
