--- a/src/app/user-site/containers/auth/signup/signup.component.scss
+++ b/src/app/user-site/containers/auth/signup/signup.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets//scss/constants.scss';
+@import '../../../../../assets//scss/constants.scss';
 
 .signup {
   margin-top: 30px;
