--- a/src/app/user-site/containers/fruits-store/fruits-store.component.scss
+++ b/src/app/user-site/containers/fruits-store/fruits-store.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/constants.scss';
+@import '../../../../assets/scss/constants.scss';
 h3 {
   margin-left: 25px;
   color: $blue_color;
