--- a/src/app/shared/components/no-internet/no-internet.component.scss
+++ b/src/app/shared/components/no-internet/no-internet.component.scss
@@ -1,8 +1,10 @@
+@import '../../../../assets/scss/constants.scss';
+
 .main-container {
   text-align: center;
   margin-top: 10%;
 }
 
 h2 {
-  color: #ff0376;
+  color: $pink_color;
 }
