linting-the-app

--- a/src/app/user-site/containers/checkout/checkout.component.scss
+++ b/src/app/user-site/containers/checkout/checkout.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets//scss/constants.scss';
+@import '../../../../assets/scss/constants.scss';
 
 .content {
   margin: 2rem;
