--- a/src/app/admin-site/components/layout/layout.component.scss
+++ b/src/app/admin-site/components/layout/layout.component.scss
@@ -8,3 +8,13 @@ mat-drawer-content {
     align-items: flex-start;
     min-height: 100vh;
 }
+
+a{
+    text-decoration: none;
+    white-space: normal;
+}
+
+.content {
+    margin: auto;
+}
+
