change-drawer-mode-to-be-side

--- a/src/app/admin-site/components/layout/layout.component.html
+++ b/src/app/admin-site/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container [hasBackdrop]="true" fxFlexFill>
-  <mat-drawer #drawer mode="push">
+  <mat-drawer #drawer mode="side">
     <div style="display: block">
       <button mat-menu-item>
         <a mat-button routerLink="admin/products" (click)="drawer.toggle()"
