--- a/src/assets/scss/constants.scss
+++ b/src/assets/scss/constants.scss
@@ -9,3 +9,5 @@ $pink_color_filter: invert(20%) sepia(100%) saturate(5944%) hue-rotate(325deg)
   brightness(101%) contrast(106%);
 $blue_color_filter: invert(60%) sepia(90%) saturate(7499%) hue-rotate(206deg)
   brightness(108%) contrast(102%);
+
+$admin_site_light_theme_primary_color: #3f51b5;
