--- a/src/app/admin-site/components/layout/layout.component.html
+++ b/src/app/admin-site/components/layout/layout.component.html
@@ -35,9 +35,9 @@
       <span>Admin Portal</span>
       <span class="buttons-spacer"></span>
       <div fxShow="true" fxHide.lt-md="true">
-        <a mat-button routerLink="admin/products">Products</a>
-        <a mat-button routerLink="admin/orders">Orders</a>
-        <a mat-button routerLink="admin/customers">Customers</a>
+        <button mat-button routerLink="admin/products">Products</button>
+        <button mat-button routerLink="admin/orders">Orders</button>
+        <button mat-button routerLink="admin/customers">Customers</button>
       </div>
       <button mat-icon-button aria-label="toggle dark_mode">
         <mat-icon>dark_mode</mat-icon>
