--- a/src/app/admin-site/components/layout/layout.component.scss
+++ b/src/app/admin-site/components/layout/layout.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../assets/scss/constants.scss";
+@import '../../../../assets/scss/constants.scss';
 
 .buttons-spacer {
   flex: 1 1 auto;
