--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
-    <div class="mat-typography admin_container">
+    <div class="mat-typography admin_container mat-app-background">
       <app-layout>
         <router-outlet></router-outlet>
       </app-layout>
