--- a/src/styles/material-theme.scss
+++ b/src/styles/material-theme.scss
@@ -7,4 +7,14 @@ $accent: mat-palette($mat-pink, A200, A100, A400);
 $warn: mat-palette($mat-red);
 $theme: mat-light-theme($primary, $accent, $warn);
 
+
+.dark-theme {
+    color: $light-primary-text;
+    $dark-primary: mat-palette($mat-green);
+    $dark-accent: mat-palette($mat-orange, A400, A100, A700);
+    $dark-warn: mat-palette($mat-red);
+    $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+  
+    @include angular-material-theme($dark-theme);
+  }
 @include angular-material-theme($theme);
