--- a/src/styles/material-theme.scss
+++ b/src/styles/material-theme.scss
@@ -5,7 +5,11 @@
 $primary: mat-palette($mat-indigo);
 $accent: mat-palette($mat-pink, A200, A100, A400);
 $warn: mat-palette($mat-red);
+$background-color: map_get($mat-indigo, 50);
 $theme: mat-light-theme($primary, $accent, $warn);
+$background: map-get($theme, background);
+$background: map_merge($background,(background: $background-color));
+$theme: map_merge($theme,(background: $background));
 
 
 .dark-theme {
