define-new-component-style-which-is-in-customer-tab-:-change-border-color-when-theme-change-after-set-border-color-in-scss-file

--- a/src/styles/material-theme.scss
+++ b/src/styles/material-theme.scss
@@ -1,4 +1,5 @@
 @import '@angular/material/theming';
+@import './components-themes.scss';
 
 @include mat-core();
 
@@ -11,6 +12,8 @@ $background: map-get($theme, background);
 $background: map_merge($background,(background: $background-color));
 $theme: map_merge($theme,(background: $background));
 
+@include angular-material-theme($theme);
+@include components-themes($theme);
 
 .dark-theme {
     color: $light-primary-text;
@@ -20,5 +23,6 @@ $theme: map_merge($theme,(background: $background));
     $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   
     @include angular-material-theme($dark-theme);
+    @include components-themes($dark-theme);
   }
 @include angular-material-theme($theme);
