--- a/src/app/admin-site/containers/customers/customers.component.scss
+++ b/src/app/admin-site/containers/customers/customers.component.scss
@@ -1,8 +1,9 @@
 @import '@angular/material/theming';
 
 @mixin customer-card-theme($theme) {
+  /* prettier-ignore */
   $primary: map-get($map: ($theme), $key: primary);
- .card {
+  .card {
     max-width: 400px;
     width: 300px;
     height: 200px;
@@ -17,4 +18,3 @@
   justify-content: space-between;
   padding: 0.5rem;
 }
-
