add-remove-customer-dialog-componenet-and-its-implmentation-using-material-and-create-a-customer-data-models

--- a/src/app/admin-site/containers/customers/customers.component.html
+++ b/src/app/admin-site/containers/customers/customers.component.html
@@ -9,7 +9,12 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-stroked-button color="primary">CONTACT</button>
-        <button mat-stroked-button color="accent">REMOVE</button>
+        <button
+          mat-stroked-button
+          color="accent"
+          (click)="openDialog(customer)">
+          REMOVE
+        </button>
       </mat-card-actions>
     </mat-card>
   </div>
